# picast

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVLOG.md  README.md  install-pi.sh  package.md  picast.toml.example  pyproject.toml  resume.md  run.sh  seed_autoplay_pools.py  simplified.md
config/: picast-server.service
docs/: ARCH-MULTI-TV-REMOTE.md  ARCH-MULTI-TV.md  ARCH-UI-OVERHAUL.md  ARCH-Z1-TWITCH-PLAYBACK.md  ARCH-Z1-TWITCH-STREAMING.md  ARCH-Z1-WATCHDOG.md  Z1-TWITCH-SESSION-HISTORY.md  ai-autopilot-architecture.md  autoplay-system.md  deployment.md  disaster-recovery.md  pi-network.md  power-diagnostics.md  v1.0.0-architecture.md  youtube-setup.md
receiver/: __init__.py  blueprint.py  install-receiver.sh  picast-receiver.service  picast_receiver.py  player.py  test_receiver.py  watchdog.py
scripts/: com.picast.refresh-taste.plist  generate-wallpaper.py  refresh-taste-profile.sh  taste-prompt.md  test-e2e-taste.sh  test-refresh.sh  validate-profile.py
tests/: conftest.py  test_api.py  test_autopilot_engine.py  test_autopilot_fleet.py  test_autoplay_pool.py  test_catalog.py  test_config.py  test_config_autopilot.py  test_config_ntfy.py  test_database.py  test_discovery.py  test_error_tracking.py  test_events.py  test_fallback.py  test_integration.py  test_library.py  test_migration.py  test_mpv_client.py  test_multi_tv.py  test_notifications.py  test_ntfy_adapter.py  test_pipulse_client.py  test_pushover_adapter.py  test_pushover_config.py  test_queue_manager.py  test_setup_wizard.py  test_sources.py  test_taste_profile.py  test_telegram.py  (+5 more)
(+56 files in other folders)
