[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picast"
dynamic = ["version"]
description = "Multi-source media center for Raspberry Pi with TUI and web control"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "JChanceLive" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
tui = [
    "textual>=0.70",
    "httpx>=0.27",
]
telegram = [
    "python-telegram-bot>=21.0",
]
discovery = [
    "zeroconf>=0.131",
]
export = [
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
picast-server = "picast.cli:run_server"
picast = "picast.cli:run_tui"
picast-pool = "picast.cli:run_pool_cli"

[tool.hatch.version]
path = "src/picast/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/picast"]

[tool.pytest.ini_options]
addopts = "--cov=picast.server --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
